--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <h1>Webpage</h1>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="Functions.js"></script>
 </body>
 
 </html>
