--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <h1>Webpage</h1>
 
     <!-- <script src="script.js"></script> -->
-    <script src="Functions.js"></script>
+    <!-- <script src="Functions.js"></script> -->
+    <script src="Asynchronous.js"></script>
 </body>
 
 </html>
